--- a/force-app/main/default/classes/ClassesObjectsMethods.cls
+++ b/force-app/main/default/classes/ClassesObjectsMethods.cls
@@ -26,7 +26,7 @@
  * Math class: https://developer.salesforce.com/docs/atlas.en-us.apexref.meta/apexref/apex_methods_system_math.htm
  * Classes: https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/apex_classes_understanding.htm
  *
- * @author Your Name
+ * @author Ishan Sharma
  */
 
 public with sharing class ClassesObjectsMethods {
@@ -39,18 +39,17 @@ public with sharing class ClassesObjectsMethods {
      * @return A list containing the length of the string, a substring of the string, and the string in lower case.
      */
     public static List<String> practiceStringMethods() {
-        // Initialize a String with 'Hello, Salesforce!'
+        String str = 'Hello, Salesforce!';
         
-        // Get the length of the String        
-        // Get a substring of the String of the first 5 characters
-        // Convert the String to lower case
+        Integer length = str.length();        
+        String subString = str.mid(0, 5);
+        String lowerCaseStaring = str.toLowerCase();
         
-        // Return the list with the string data
-        // In the first position add the string length
-        // In the second position add the substring
-        // In the third position add the string in lower case
-
-        return null; // Replace null with the variable you used to store the result
+        List<String> listOfPracticeStringMethods = new List<String>();
+        listOfPracticeStringMethods.add(String.valueOf(length));
+        listOfPracticeStringMethods.add(subString);
+        listOfPracticeStringMethods.add(lowerCaseStaring);
+        return listOfPracticeStringMethods;
     }
 
     /**
@@ -61,15 +60,16 @@ public with sharing class ClassesObjectsMethods {
      * @return A list of boolean values indicating whether the string starts with 'Sales', ends with 'Force', or contains 'Awesome'.
      */
     public static List<Boolean> checkStringContent(String input) {
-        // Initialize a list to store the results
+        String str = input;
+        List<Boolean> resultList = new List<Boolean>();
         
-        // Check if the string starts with 'Sales'
-        
-        // Check if the string ends with 'Force'
-        
-        // Check if the string contains 'Awesome'
-        
-        return null; // Replace null with the variable you used to store the result
+        Boolean stringStartCheck = str.startsWith('Sales');
+        Boolean stringEndCheck = str.endsWith('Force');
+        Boolean stringContainsCheck = str.contains('Awesome');
+        resultList.add(stringStartCheck);
+        resultList.add(stringEndCheck);
+        resultList.add(stringContainsCheck);
+        return resultList;
     }
 
     /**
@@ -80,16 +80,27 @@ public with sharing class ClassesObjectsMethods {
      * @return A string consisting of only unique words from the input sentence.
      */
     public static String removeDuplicateWords(String sentence) {
-        // Split the sentence into words
+        String uniqueWordSentence = '';
+        Integer i = 1;
 
-        // Create a set to store the unique words
+        List<String> separateWords = sentence.split(' ');
+        Set<String> uniqueWords = new Set<String>();
+        for(String s: separateWords) {
+            uniqueWords.add(s);
+        }
 
-        // Add each word to the set
-
-        // Join the unique words back into a sentence
-
-        // Return the sentence with unique words
-        return null; // Replace null with the variable you used to store the result
+        List <String> setToList = new List<String>(uniqueWords);
+        Integer setToListSize = setToList.size();
+        for(String s: setToList) {
+            if(i < setToListSize){
+                uniqueWordSentence += s + ' ';
+                i++;
+            } else{
+                uniqueWordSentence += s;
+                i++;
+            }
+        }
+        return uniqueWordSentence;
     }
 
     /**
@@ -101,17 +112,18 @@ public with sharing class ClassesObjectsMethods {
      * @return The number of vowels in the string.
      */
     public static Integer countVowels(String str) {
-        // Initialize the result Integer
+        Integer numberOfVowels = 0;
+        List<String> vowelList = new List<String>{'a' , 'e' , 'i' , 'o' , 'u'};
+        List<String> listOfStr = str.split(' ');
 
-        /*
-        for () {
-            // get individual characters from the string - hint use substring or split
-            // check if the character is a vowel
-            // if it is a vowel, increment the result Integer
+        for(String s: listOfStr) {
+            for(Integer i = 0; i < vowelList.size(); i++) {
+                if(s.countMatches(vowelList[i]) > 0) {
+                    numberOfVowels += s.countMatches(vowelList[i]);
+                }
+            }  
         }
-        */
-
-        return null; // Replace null with the variable you used to store the result
+        return numberOfVowels;
     }
 
     /**
@@ -122,20 +134,18 @@ public with sharing class ClassesObjectsMethods {
      * @return A string containing the names of scientists that contain the letter 'g'.
      */
     public static String findTheScientist() {
-        // The list of scientists' names
         List<String> scientistNames = new List<String>{'Tim Berners-Lee', 'Alan Turing', 'Grace Hopper', 'Donald Knuth', 'Guido van Rossum', 'Ken Thompson', 'Stephen Hawking'};
+        String resultString = '';
 
-        // The variable to store the concatenated string
-
-        // Loop through the list of scientists' names
-
-            // If the name doesn't contain the letter 'G', skip this iteration
-
-            // Add the name to the result string, followed by a comma
-
-        // Remove the last comma from the result string
-
-        return null; // Replace null with the variable you used to store the result
+        for(String s: scientistNames) {
+            String str = s.toLowerCase();
+            if(str.containsNone('g')) {
+                continue;
+            }
+            resultString += s + ',';    
+        }
+        resultString = resultString.removeEnd(',');
+        return resultString;
     }
 
     /**
@@ -147,12 +157,10 @@ public with sharing class ClassesObjectsMethods {
      * @return The absolute value of the difference
      */
     public static Double calculateDifferenceOfSquares(Double a, Double b) {
-        // Square the input numbers using the Math.pow() function
-
-        // Calculate the absolute difference using Math.abs() function
-
-        // Return the result
-        return null; // Replace null with the variable you used to store the result
+        Double squareVarialble1 = Math.pow(a, 2);
+        Double squareVariable2 = Math.pow(b, 2);
+        Double difference = Math.abs(squareVarialble1 - squareVariable2);
+        return difference;
     }
 
     /**
@@ -162,10 +170,8 @@ public with sharing class ClassesObjectsMethods {
      * @return A integer between 50 and 100.
      */
     public static Integer generateRandomNumber() {
-        // Use Math class to generate number between 50 and 100
-
-        // Return the random integer
-        return null; // Replace null with the variable you used to store the result
+        Integer result = Integer.valueOf((Math.random() * 50) + 50);
+        return result;
     }
 
     /**
@@ -175,12 +181,9 @@ public with sharing class ClassesObjectsMethods {
      * @return The current date in the current user locale format.
      */
     public static String getCurrentDate() {
-        // Get the todays date
-
-        // Format the current date
-
-        // Return the result
-        return null; // Replace null with the variable you used to store the result
+        Date todaysDate = Date.today();
+        String formattedDate = todaysDate.format();
+        return formattedDate;
     }
 
     /**
@@ -190,15 +193,16 @@ public with sharing class ClassesObjectsMethods {
      * @return The number of the day of the week for the given date.
      */
     public static String getDayOfWeek(DateTime dt) {
-        // Define a map of day of the week as a key and day number as the value
-        // Monday = 1, Tuesday = 2, etc.
-
-        // Get the day name using .format('EEEE');
-
-        // Get the day number from the map using the day name
-
-        // Return the result as a string
-        return null; // Replace null with the variable you used to store the result
+        Map<String,String> weekdayNumber = new Map<String,String>();
+            weekdayNumber.put('Monday' , '1');
+            weekdayNumber.put('Tuesday' , '2');
+            weekdayNumber.put('Wednesday' , '3');
+            weekdayNumber.put('Thursday' , '4');
+            weekdayNumber.put('Friday' , '5');
+            weekdayNumber.put('Saturday' , '6');
+            weekdayNumber.put('Sunday' , '7');
+        String dateOfWeek = dt.format('EEEE');
+        return weekdayNumber.get(dateOfWeek);
     }
 
 
@@ -212,10 +216,13 @@ public with sharing class ClassesObjectsMethods {
      * @return The a positive number years between the two dates, or null if either date is null.
      */
     public static Integer calculateYearDifference(Date d1, Date d2) {
-
-        // Subtract the difference in years
-
-        return null; // Replace null with the variable you used to store the result
+        if(d1 != null && d2 != null) {
+            Integer d1Year = d1.year();
+            Integer d2Year = d2.year();
+            Integer differenceInYears = d2Year - d1Year;
+            return differenceInYears;
+        }
+        return null;
     }
 
     /**
@@ -226,20 +233,18 @@ public with sharing class ClassesObjectsMethods {
      * where you need to manipulate and manage book information.
      */
     public class Book {
-        // Declare three public instance variables - title, author, pages
-        // title
-        // author
-        // pages
+        public String title;
+        public String author;
+        public Integer pages;
     
-        // Book constructor to initialize the title and author
-        public Book() {
-            // Initialize the title and author
+        public Book(String title, String author) {
+            this.title = title;
+            this.author = author;
         }
     
-        // Method that returns the details of the book
         public String getBookDetails() {
-            // return A string containing the details of the book in the format "Title: <title>, Author: <author>"
-            return null; // Replace null with the variable you used to store the result
+            String str = 'Title: ' + title + ',' + ' ' + 'Author: ' + author;
+            return str;
         }
     }
     
@@ -251,12 +256,8 @@ public with sharing class ClassesObjectsMethods {
      * @return A string containing the details of the book.
      */
     public static String createAndGetBookDetails() {
-        // Create a Book object with title "A Brief History of Time" and author "Stephen Hawking"
-
-        // Call the getBookDetails method on the book object to get the details of the book
-
-        // Return the details of the book
-        return null; // Replace null with the variable you used to store the result
+        ClassesObjectsMethods.Book myBook = new ClassesObjectsMethods.Book('A Brief History of Time','Stephen Hawking');
+        return myBook.getBookDetails();
     }
 
     /**
@@ -269,19 +270,15 @@ public with sharing class ClassesObjectsMethods {
      * @return return a list of books.
      */
     public static List<Book> generateBookList(Book myBook1) {
-        // Create a list of books
-
-        // Update the title and author of myBook1
-
-        // Update the pages for myBook1 to 352
-
-        // Create a new Book object with title "A Brief History of Time" and author "Stephen Hawking"
-
-        // Update the pages for A Brief History of Time to 256
-
-        // Add the book to the list
-        
-        return null; // Replace null with the variable you used to store the result      
+        List<Book> listOfBooks = new List<Book>();
+        myBook1.author = 'J.K. Rowling';
+        myBook1.title = 'Harry Potter and the Chamber of Secrets';
+        myBook1.pages = 352;
+        ClassesObjectsMethods.Book myBook = new ClassesObjectsMethods.Book('A Brief History of Time','Stephen Hawking');
+        myBook.pages = 256;
+        listOfBooks.add(myBook1);
+        listOfBooks.add(myBook);
+        return listOfBooks;     
     }
 
 
@@ -293,21 +290,34 @@ public with sharing class ClassesObjectsMethods {
      * where you need to manipulate and manage person information.
      */
     public class Person {
-        // Declare private two instance variables - (TEXT) name and (Number) age
-        
-        // Constructor to initialize the name and age
-    
-        // Method introduceYourself that returns the details of the person        
-        // Return a string in the format "Hello, my name is <name> and I am <age> years old."
-        // For example, introduceYourself() should return a string like "Hello, my name is John Doe and I am 28 years old."
+        private String name;
+        private Integer age;
 
-        // Getter method that returns the name of the person
+        public Person(String name, Integer age) {
+            this.age = age;
+            this.name = name;
+        }
 
-        // Getter method that returns the age of the person
+        public String introduceYourself() {
+            String str = 'Hello, my name is ' + name + ' and I am ' + age + ' years old.';
+            return str; 
+        }
 
-        // Setter method that sets the name of the person
+        public String getName() {
+            return name;
+        }
 
-        // Setter method that sets the age of the person
+        public Integer getAge() {
+            return age;
+        }
+
+        public void setName(String name) {
+            this.name = name;
+        }
+
+        public void setAge(Integer age) {
+            this.age = age;
+        }
     }
 
     /**
@@ -319,16 +329,13 @@ public with sharing class ClassesObjectsMethods {
 
     public static List<String> personDetails() {
         List<String> results = new List<String>();
-        // Create a new instance of Person class
-        // Name the person 'John Doe' and set the age to 28
-
-        // Add the details of the person using the introduceYourself method
-
-        // Get the name of the person using the getter method and add it to the list
-
-        // Get the age of the person using the getter method and add it to the list
-        
-        return null; // Replace null with the variable you used to store the result
+        ClassesObjectsMethods.Person varPerson = new ClassesObjectsMethods.Person('John Doe', 28);
+        results.add(varPerson.introduceYourself());
+        String personName = varPerson.getName();
+        results.add(personName);
+        String personAge = String.valueOf(varPerson.getAge());
+        results.add(personAge);
+        return results;
     }
 
     /**
@@ -339,10 +346,8 @@ public with sharing class ClassesObjectsMethods {
      * @return A new instance of the Person class.
      */
     public static Person createPerson(String name, Integer age) {
-        // Create a new instance of the Person class using the provided name and age
-        
-        // Return the new instance of the Person class
-        return null; // Replace null with the variable you used to store the result
+        ClassesObjectsMethods.Person newPerson = new ClassesObjectsMethods.Person(name , age);
+        return newPerson;
     }
 
     /**
@@ -355,15 +360,12 @@ public with sharing class ClassesObjectsMethods {
      * @return A list of new Person objects.
      */
     public static List<Person> createMultiplePersons(List<String> names, Integer age) {
-
-        // Loop through each name in the provided list of names
-            // Create a new Person object for each name
-            
-            // Add the new Person object to the list of Person objects
-        
-        
-        // Return the list of Person objects
-        return null; // Replace null with the variable you used to store the result
+        List<Person> newPersonList = new List<Person>();
+        for(String s: names) {
+            ClassesObjectsMethods.Person newPerson = new ClassesObjectsMethods.Person(s , age);
+            newPersonList.add(newPerson);
+        }
+        return newPersonList;
     }
 
 
@@ -378,6 +380,13 @@ public with sharing class ClassesObjectsMethods {
      * @return The Person object of the older person.
      */
     public static Person getOlderPerson(Person person1, Person person2) {
-        return null; // Replace null with the variable you used to store the result
+        Integer agePerson1 = person1.getAge();
+        Integer agePerson2 = person2.getAge();
+        if(agePerson1 > agePerson2) {
+            return person1;
+        } else if(agePerson1 == agePerson2) {
+            return person1;
+        } else
+        return person2;
     }
 }
